2006-08-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsListViewContainer.m
	([UIxContactsListViewContainer -contactFolderName]): new method to
	return the absolute path to the current contact folder, called
	from within the template.

	* UI/Templates/ContactsUI/UIxContactsListViewContainer.wox: added
	JS code to initialize the 'currentContactFolder' generic var.

	* SoObjects/Contacts/SOGoContactFolder.m ([SOGoContactFolder
	+contactFolderWithSource:inContainer:andName:]): new class
	method meant to return an instance connected to the specified
	source. Currently useless but won't be anymore in the next few
	days.

	* SoObjects/SOGo/SOGoUserFolder.h: commented out declaration of
	the "lookupFreeBusyObject" method since it does not exist.

	* UI/Contacts/UIxContactFoldersView.[hm]: new class module serving
	as a "view" for the SOGoContactFolders object. Does nothing but
	redirect the browser to the URL of the personal address book of
	the user. It does not even have a template.

	* SoObjects/Contacts/SOGoPersonalAB.[hm]: new class module
	implementing the SOGoContactSource protocol. Does nothing
	currently but will be used to implement access to the personal
	address book of the user stored in the SOGo database.

	* SoObjects/Contacts/SOGoContactSource.h: new "SOGoContactSource"
	protocol defining an API common to all possible types of contact
	sources.

	* SoObjects/Contacts/SOGoContactFolders.[hm]: new class module
	serving as the root of the contact folders available to the
	current user. Correctly lists the contact sources in webdav.

2006-08-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailAccountsView.m ([UIxMailAccountsView
	-composeAction]): new action method that permits external object
	to write a message from the default (primary) account.

	* UI/Contacts/UIxContactEditorBase.m ([UIxContactEditorBase
	-initSnapshot]): new method with code taken from "defaultAction"
	but needed for others.